# v2c-firmware

./: CMakeLists.txt  README.md  hires_color_patterns.h  iic.c  iic.h  main.c  render.c  render.h  v2logo.h  vgaout.c  vgaout.h  vidin.pio  vidout.pio
font/: Makefile  videx.rom
